Fix scrollbar layout shift change on Settings page

--- a/src/elements/View.module.css
+++ b/src/elements/View.module.css
@@ -11,6 +11,7 @@
   display: grid;
   grid-template-columns: 350px;
   justify-content: center;
+  scrollbar-gutter: stable;
 }
 
 .centeredViewContent {
